[tool.poetry]
name = "nonebot_plugin_youthstudy"
version = "1.1.0"
description = "基于nonebot2的青年大学习插件"
authors = ["ayanamiblhx <1196818079@qq.com>"]
license = "GNU General Public License v3.0"
homepage = "https://github.com/ayanamiblhx/nonebot_plugin_youthstudy"
readme="README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
httpx = "^0.21.3"
nonebot2 = ">=2.0.0b2"
nonebot-adapter-onebot = "^2.0.0b1"
Pillow = "^9.0.1"
nonebot-plugin-apscheduler = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
